--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ws": "^8.2.2"
   },
   "devDependencies": {
-    "@types/discord-rpc": "^4.0.0"
+    "@types/discord-rpc": "^4.0.0",
+    "@types/ws": "^8.2.0"
   }
 }
