--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "discord-rpc": "^4.0.1",
     "electron": "^15.0.0",
     "fetch": "^1.1.0",
+    "node-deb": "^0.10.7",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
     "ws": "^8.2.2"
@@ -33,5 +34,11 @@
   "devDependencies": {
     "@types/discord-rpc": "^4.0.0",
     "@types/ws": "^8.2.0"
+  },
+  "node_deb": {
+    "version": "1.0.0-RELEASE",
+    "entrypoints": {
+      "daemon": "index.js"
+    }
   }
 }
