--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "discord-rpc": "^4.0.1",
     "electron": "^15.0.0",
     "fetch": "^1.1.0",
+    "jsbi": "^4.2.0",
+    "mpris-service": "^2.1.2",
     "node-deb": "^0.10.7",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
